updated email and images

--- a/webroot/emails/master_email.html
+++ b/webroot/emails/master_email.html
@@ -3,7 +3,7 @@
 		<title></title>
 	</head>
 	<body>
-		<table width="550">
+		<table width="550" border="0" cellpadding="0" cellspacing="0">
 			<thead width="550">
 				<th width="550"><img src="file://localhost/Users/phillipmaddox/Sites/deedsy/app/webroot/img/email_header.jpg" alt="email header" width="550" height="162"</th>
 			</thead>
@@ -15,8 +15,19 @@
 						<hr />
 						<h1 style="font-family: myriad pro; font-size: 32px; font-weight: bolder; color: #640663;">Help, :Firstname: with his deed!</h1>
 					</td>
-					
-				</tr>
+					</tr>
+					<tr>
+						<td width="500">
+							<a href="#"><img src="file://localhost/Users/phillipmaddox/Sites/deedsy/app/webroot/img/igotthis_button.jpg" alt="I Got This Button"/></a>
+						</td>	
+					</tr>
+					<tr width="500">
+						<td border="0"><img src="file://localhost/Users/phillipmaddox/Sites/deedsy/app/webroot/img/1.jpg" alt="0"/></td>
+						<td border="0"><img src="file://localhost/Users/phillipmaddox/Sites/deedsy/app/webroot/img/2.jpg" alt="0"/></td>
+						<td border="0"><img src="file://localhost/Users/phillipmaddox/Sites/deedsy/app/webroot/img/3.jpg" alt="0"/></td>
+						<td border="0"><img src="file://localhost/Users/phillipmaddox/Sites/deedsy/app/webroot/img/4.jpg" alt="0"/></td>
+						<td border="0"><img src="file://localhost/Users/phillipmaddox/Sites/deedsy/app/webroot/img/5.jpg" alt="0"/></td>
+					</tr>	
 			</tbody>
 		</table>
 	</body>
